New option to set the isolation level